# vtk-grass-bridge

./: CMakeLists.txt  CMakeOptions.cmake  Doxyfile  HowToCompile.md  MainPage.dox  ProjectHome.md  ProjectStatistic.md  README  rToTinResults.md  vtkGRASSBridgeConfigure.h.in
CMake/: FindGEOS.cmake  FindGRASS.cmake
Common/: CMakeLists.txt  vtkCELL.h  vtkDCELL.h  vtkDouble.cxx  vtkDouble.h  vtkFCELL.h  vtkGRASSBridgeCommonWin32Header.h  vtkGRASSDatabaseInfo.cxx  vtkGRASSDefines.h  vtkGRASSFileLister.cxx  vtkGRASSFileLister.h  vtkGRASSFlag.cxx  vtkGRASSFlag.h  vtkGRASSHistory.cxx  vtkGRASSInit.cxx  vtkGRASSInit.h  vtkGRASSMessagingInterface.h  vtkGRASSModule.cxx  vtkGRASSModule.h  vtkGRASSOption.cxx  vtkGRASSOption.h  vtkGRASSOptionFactory.cxx  vtkGRASSOptionFactory.h  vtkGRASSRasterMapLister.h  vtkGRASSRegion.cxx  vtkGRASSRegion.h  vtkObjectGRASSErrorHandler.cxx  vtkObjectGRASSErrorHandler.h
DBMI/: CMakeLists.txt  vtkGRASSDbmiCatValueArray.cxx  vtkGRASSDbmiCatValueArray.h  vtkGRASSDbmiColumn.cxx  vtkGRASSDbmiColumn.h  vtkGRASSDbmiInterface.cxx  vtkGRASSDbmiInterface.h  vtkGRASSDbmiInterfaceReader.cxx  vtkGRASSDbmiInterfaceWriter.h  vtkGRASSDbmiTable.cxx  vtkGRASSDbmiTable.h  vtkGRASSDbmiValue.cxx  vtkGRASSDbmiValue.h
DBMI/Testing/Python/: vtkGRASSDbmiCatValueArrayTest.py  vtkGRASSDbmiInterfaceReaderTest.py  vtkGRASSDbmiInterfaceWriterTest.py
Examples/: Raster3dImageReader.py  RasterImageReader.java  RasterImageReader.py  RasterMapReaderWriter.py  TODO  VectorDelaunayTriangulation.java  VectorDelaunayTriangulation.py  VectorDelaunyTriangulation.py  r.contour.py  r.gauss.smooth  r.gauss.smooth.py  r.to.tin.py  v.delaunay2d.py  vtkGRASSBridgeModuleBase.py
Filtering/: CMakeLists.txt  vtkGRASSBridgeFilteringWin32Header.h  vtkGRASSBridgeVoxelModeller.h  vtkTemporalDataSetSource.cxx  vtkTemporalDataSetSource.h
Graphics/: CMakeLists.txt  vtkRInterfaceSpaceTime.cxx  vtkRInterfaceSpatial.h
Graphics/Testing/Python/: vtkRInterfaceSpaceTimeTest.py  vtkRInterfaceSpatialTest.py
IO/: CMakeLists.txt  vtkGRASSBridgeIOWin32Header.h  vtkGRASSMultiRasterPolyDataLineReader.cxx  vtkGRASSMultiRasterPolyDataLineReader.h  vtkGRASSMultiRasterPolyDataLineWriter.cxx  vtkGRASSMultiRasterPolyDataLineWriter.h  vtkGRASSMultiVectorPolyDataLineReader.cxx  vtkGRASSMultiVectorPolyDataLineReader.h  vtkGRASSRaster3dImageReader.cxx  vtkGRASSRaster3dImageReader.h  vtkGRASSRaster3dImageWriter.cxx  vtkGRASSRaster3dImageWriter.h  vtkGRASSRasterImageReader.h  (+12 more)
Modules/Cxx/: CMakeLists.txt  v.sample.rast.cxx
RSpaceTime/: CMakeLists.txt  vtkRInterfaceSpaceTime.h
RSpaceTime/Testing/Python/: vtkRInterfaceSpatialTest.py
Temporal/: CMakeLists.txt
Temporal/Testing/Python/: vtkTemporalDataSetSourceTest.py
trunk/Common/: CMakeLists.txt  vtkCELL.cxx  vtkDCELL.cxx  vtkDCELL.h  vtkFCELL.cxx  vtkFCELL.h  vtkGRASSDatabaseInfo.cxx  vtkGRASSDatabaseInfo.h  vtkGRASSDefines.h  vtkGRASSFileLister.cxx  vtkGRASSFileLister.h  vtkGRASSFlag.cxx  vtkGRASSFlag.h  vtkGRASSHistory.cxx  vtkGRASSHistory.h  vtkGRASSInit.cxx  vtkGRASSInit.h  vtkGRASSMessagingInterface.cxx  vtkGRASSModule.cxx  vtkGRASSOption.cxx  vtkGRASSOption.h  vtkGRASSOptionFactory.cxx  vtkGRASSOptionFactory.h  vtkGRASSRaster3dMapLister.cxx  vtkGRASSRaster3dMapLister.h  vtkGRASSRasterMapLister.cxx  vtkGRASSRegion.cxx  vtkGRASSRegion.h  vtkGRASSVectorMapLister.cxx  vtkGRASSVectorMapLister.h  vtkObjectGRASSErrorHandler.cxx  vtkObjectGRASSErrorHandler.h
trunk/Common/Testing/Python/: GRASSDatabaseInfoTest.py  GRASSModuleTest.py  GRASSRegionTest.py
trunk/Filtering/: CMakeLists.txt  vtkGRASSBridgeFilteringWin32Header.h  vtkGRASSBridgeVoxelModeller.cxx  vtkTemporalDataSetSource.cxx  vtkTemporalDataSetSource.h
trunk/Filtering/Testing/Python/: vtkDataSetToRDataFrameFilterTest.py  vtkTemporalDataSetSourceTest.py
trunk/Graphics/: CMakeLists.txt  vtkGRASSBridgeGraphicsWin32Header.h  vtkRInterfaceSpaceTime.cxx  vtkRInterfaceSpaceTime.h  vtkRInterfaceSpatial.cxx  vtkRInterfaceSpatial.h
trunk/Graphics/Testing/Python/: vtkRInterfaceSpaceTimeTest.py  vtkRInterfaceSpatialTest.py
trunk/IO/: CMakeLists.txt  vtkGRASSMultiRasterPolyDataLineReader.cxx  vtkGRASSMultiRasterPolyDataLineReader.h  vtkGRASSMultiRasterPolyDataLineWriter.h  vtkGRASSMultiVectorPolyDataLineReader.cxx  vtkGRASSRaster3dImageReader.cxx  vtkGRASSRaster3dImageWriter.h  vtkGRASSRasterImageReader.cxx  vtkGRASSRasterImageReader.h  vtkGRASSRasterImageWriter.cxx  vtkGRASSRasterImageWriter.h  vtkGRASSRasterToImageReader.cxx  vtkGRASSRasterToImageReader.h  vtkGRASSVectorPolyDataAreaWriter.cxx  vtkGRASSVectorPolyDataReader.cxx  vtkGRASSVectorPolyDataReader.h  vtkGRASSVectorPolyDataWriter.cxx  vtkGRASSVectorPolyDataWriter.h  vtkGRASSVectorTopoPolyDataReader.cxx  vtkGRASSVectorTopoPolyDataReader.h
trunk/IO/Testing/Python/: GRASSMultiRasterPolyDataLineReaderTest.py  GRASSRasterImageReaderWriter.py  GRASSVectorPolyDataReaderTest.py  GRASSVectorPolyDataReaderWriterTest.py
trunk/Raster/: CMakeLists.txt  vtkGRASSHistory.cxx  vtkGRASSHistory.h  vtkGRASSRasterMapBase.cxx  vtkGRASSRasterMapBase.h  vtkGRASSRasterMapReader.cxx  vtkGRASSRasterMapReader.h  vtkGRASSRasterMapWriter.cxx  vtkGRASSRasterMapWriter.h  vtkGRASSRasterMemoryMap.cxx  vtkGRASSRasterRow.cxx
trunk/Raster/Testing/Python/: GRASSRasterMapReaderWriterTest.py  GRASSRasterMapReaderWriterTest1.py  GRASSRasterMapReaderWriterTest3.py
trunk/Vector/: CMakeLists.txt  vtkGRASSBridgeVectorWin32Header.h  vtkGRASSVectorBBox.h  vtkGRASSVectorDBColumn.h  vtkGRASSVectorDBInterface.cxx  vtkGRASSVectorDBTable.h  vtkGRASSVectorFeatureCats.cxx  vtkGRASSVectorFeatureCats.h  vtkGRASSVectorFeaturePoints.cxx  vtkGRASSVectorFeaturePoints.h  vtkGRASSVectorMapBase.cxx  vtkGRASSVectorMapBase.h  vtkGRASSVectorMapNoTopoReader.cxx  vtkGRASSVectorMapNoTopoReader.h  vtkGRASSVectorMapTopoReader.cxx  vtkGRASSVectorMapTopoReader.h  vtkGRASSVectorMapUpdater.cxx  vtkGRASSVectorMapUpdater.h  vtkGRASSVectorMapWriter.cxx  vtkGRASSVectorMapWriter.h
trunk/Vector/Testing/Python/: GRASSVectorFeaturePointsTest.py  GRASSVectorMapBase.py  GRASSVectorMapTopoReader.py  GRASSVectorMapTopoReaderWriter.py
(+194 files in other folders)
